--- a/_gitbook_99-References.Rmd
+++ b/_gitbook_99-References.Rmd
@@ -4,4 +4,4 @@ output:
   pdf_document: default
 ---
 
-`r if (knitr::is_html_output()) '# References {-}'`
+`r if (knitr::is_html_output()) '# Referencias {-}'`
