Clean index.Rmd, and update to match latest english version

--- a/index.Rmd
+++ b/index.Rmd
@@ -64,14 +64,14 @@ Este libro también fue escrito en el despertar de la crisis de reproducibilidad
 <!-- In 2018 I began teaching an undergraduate statistics course at Stanford (Psych 10/Stats 60).  I had never taught statistics before, and this was a chance to shake things up.  I have been increasingly unhappy with undergraduate statistics education in psychology, and I wanted to bring a number of new ideas and approaches to the class.  In particular, I wanted to bring to bear the approaches that are increasingly used in real statistical practice in the 21st century.  As Brad Efron and Trevor Hastie laid out so nicely in their book "Computer Age Statistical Inference: Algorithms, Evidence, and Data Science", these methods take advantage of today's increased computing power to solve statistical problems in ways that go far beyond the more standard methods that are usually taught in the undergraduate statistics course for psychology students. -->
 En 2018, comencé a enseñar un curso de estadística de licenciatura en Stanford (Psych 10/Stats 60). Nunca había enseñado estadística antes, y esta era una oportunidad de sacudir las cosas. He estado cada más insatisfecho con la educación estadística en la licenciatura en psicología, y quería brindar nuevas ideas y aproximaciones a la clase. En particular, quería brindar las aproximaciones que están siendo cada vez más usadas en la práctica estadística real en el siglo 21. Como lo han dicho tan claramente Brad Efron y Trevor Hastie en su libro "Computer Age Statistical Inference: Algorithms, Evidence, and Data Science", estos métodos toman la ventaja del poder computacional de hoy en día para resolver problemas en maneras que van mucho más allá de los métodos estándar que son usualmente enseñados en los cursos de estadística a estudiantes de licenciatura en psicología.
 
-<!-- The first year that I taught the class, I used Andy Field's amazing graphic novel statistics book, "An Adventure in Statistics", as the textbook.  There are many things that I really like about this book -- in particular, I like the way that it frames statistical practice around the building of models, and treats null hypothesis testing with sufficient caution (though insufficient disdain, in my opinion). Unfortunately, most of my students hated the book, primarily because it involved wading through a lot of story to get to the statistical knowledge.  I also found it wanting because there are a number of topics (particularly those from the burgeoning field of artificial intelligence known as *machine learning*) that I wanted to include but were not discussed in his book.  I ultimately came to feel that the students would be best served by a book that follows very closely to my lectures, so I started writing down my lectures into a set of computational notebooks that would ultimately become this book. The outline of this book follows roughly that of Field's book, since the lectures were originally based in large part on the flow of that book, but the content is substantially different (and almost certainly much less fun and clever). I also tailored the book for the 10-week quarter system that we use at Stanford, which provides less time than the 16-week semester that most statistical textbooks are built for.  -->
-El primer año que enseñé esa clase, usé como libro de texto el increíble libro de Andy Field en su versión de novela gráfica, "An Adventure in Statistics". El libro tiene muchas cosas que realmente me gustan -- en particular, me gusta la manera en que presenta la práctica estadística alrededor de la construcción de modelos, y trata la prueba de hipótesis con suficiente cuidado (aunque con insuficiente desdén, en mi opinión). Desafortunadamente, la mayoría de mis estudiantes odiaron el libro, principalmente porque implicaba navegar por demasiada historia para llegar al conocimiento estadístico. También lo incontré insuficiente porque había una cantidad de temas (particularmente aquellos del campo de la inteligencia artificial conocidos como *machine learning*) que quería incluir pero que no estaban mencionados en el libro. Finalmente sentí que los estudiantes encontrarían mejor el revisar un libro que siguiera muy de cerca mis clases, por lo que comencé a escribir mis clases en un conjunto de cuadernos computacionales que eventualmente se convertirían en este libro. La estructura de este libro sigue aproximadamente la del libro de Field, porque las clases originalmente se basaron en gran medida en el curso de ese libro, pero el contenido es sustancialmente diferente (y casi seguro que mucho menos divertido o inteligente). También ajusté el libro para el sistema de trimestre de 10 semanas que se usa en Stanford, que provee menos tiempo que el semestre de 16 semanas para los que la mayoría de los libros de texto de estadística están escritos.
+<!-- The first year that I taught the class, I used Andy Field's amazing graphic novel statistics book, "An Adventure in Statistics", as the textbook.  There are many things that I really like about this book -- in particular, I like the way that it frames statistical practice around the building of models, and treats null hypothesis testing with sufficient caution. Unfortunately, many of my students disliked the book (except for the English majors, who loved it!), primarily because it involved wading through a lot of story to get to the statistical knowledge.  I also found it wanting because there are a number of topics (particularly those from the burgeoning field of artificial intelligence known as *machine learning*) that I wanted to include but were not discussed in his book.  I ultimately came to feel that the students would be best served by a book that follows very closely to my lectures, so I started writing down my lectures into a set of computational notebooks that would ultimately become this book. The outline of this book follows roughly that of Field's book, since the lectures were originally based in large part on the flow of that book, but the content is substantially different (and almost certainly much less fun and clever). I also tailored this book for the 10-week quarter system that we use at Stanford, which provides less time than the 16-week semester that most statistical textbooks are built for.  -->
+El primer año que enseñé esa clase, usé como libro de texto el increíble libro de Andy Field en su versión de novela gráfica, "An Adventure in Statistics". El libro tiene muchas cosas que realmente me gustan -- en particular, me gusta la manera en que presenta la práctica estadística alrededor de la construcción de modelos, y trata la prueba de hipótesis con suficiente cuidado. Desafortunadamente, a la mayoría de mis estudiantes no les gustó el libro (excepto a los estudiantes de literatura, ¡quienes lo amaron!), principalmente porque implicaba navegar por demasiada historia para llegar al conocimiento estadístico. También lo incontré insuficiente porque había una cantidad de temas (particularmente aquellos del campo de la inteligencia artificial conocidos como *machine learning*) que quería incluir pero que no estaban mencionados en el libro. Finalmente sentí que los estudiantes encontrarían mejor el revisar un libro que siguiera muy de cerca mis clases, por lo que comencé a escribir mis clases en un conjunto de cuadernos computacionales que eventualmente se convertirían en este libro. La estructura de este libro sigue aproximadamente la del libro de Field, porque las clases originalmente se basaron en gran medida en el curso de ese libro, pero el contenido es sustancialmente diferente (y casi seguro que mucho menos divertido o inteligente). También ajusté el libro para el sistema de trimestre de 10 semanas que se usa en Stanford, que provee menos tiempo que el semestre de 16 semanas para los que la mayoría de los libros de texto de estadística están escritos.
 
 <!-- ## The golden age of data -->
 ## La era dorada de la información
 
 <!-- Throughout this book I have tried when possible to use examples from real data.  This is now very easy because we are swimming in open datasets, as governments, scientists, and companies are increasingly making data freely available.  I think that using real datasets is important because it prepares students to work with real data rather than toy datasets, which I think should be one of the major goals of statistical training. It also helps us realize (as we will see at various points throughout the book) that data don't always come to us ready to analyze, and often need *wrangling* to help get them into shape.  Using real data also shows that the idealized statistical distributions often assumed in statistical methods don't always hold in the real world -- for example, as we will see in Chapter \@ref(summarizing-data), distributions of some real-world quantities (like the number of friends on Facebook) can have very long tails that can break many standard assumptions.  -->
-A lo largo de este libro he tratado usar ejemplos de datos reales cuando es posible. Actualmente es bastante fácil porque estamos sumergidos en bases de datos abiertas, provenientes de gobiernos, de científicos, y de compañías que crecientemente hacen disponibles sus datos de manera gratuita. Pienso que usar datos reales es importante porque prepara a los estudiantes para trabajar con datos reales en lugar de datos de juguete, lo que creo que debería ser uno de los objetivos principales del entrenamiento en estadística. También nos ayuda a darnos cuenta (como veremos en varios puntos a lo largo del libro) que los datos no siempre vienen listos para analizarse, y que frecuentemente necesitan un poco de *pelea* para ayudarlos a tener forma. Usando datos reales también podemos mostrar que las distribuciones estadísticas idealizadas frecuentemente asumidas (presupuestas) en los métodos estadísticos no siempre se mantienen en el mundo real -- por ejemplo, como veremos en el Capítulo \@ref(summarizing-data), distribuciones de algunas cantidades en el mundo real (como el número de amigos en Facebook) puede tener colas muy largas que pueden romper varias suposiciones estándares.
+A lo largo de este libro he tratado de usar ejemplos de datos reales cuando es posible. Actualmente es bastante fácil porque estamos sumergidos en bases de datos abiertas, provenientes de gobiernos, de científicos, y de compañías que crecientemente hacen disponibles sus datos de manera gratuita. Pienso que usar datos reales es importante porque prepara a los estudiantes para trabajar con datos reales en lugar de datos de juguete, lo que creo que debería ser uno de los objetivos principales del entrenamiento en estadística. También nos ayuda a darnos cuenta (como veremos en varios puntos a lo largo del libro) que los datos no siempre vienen listos para analizarse, y que frecuentemente necesitan un poco de *pelea* para ayudarlos a tener forma. Usando datos reales también podemos mostrar que las distribuciones estadísticas idealizadas frecuentemente asumidas (presupuestas) en los métodos estadísticos no siempre se mantienen en el mundo real -- por ejemplo, como veremos en el Capítulo \@ref(summarizing-data), distribuciones de algunas cantidades en el mundo real (como el número de amigos en Facebook) puede tener colas muy largas que pueden romper varias suposiciones estándares.
 
 <!-- I apologize up front that the datasets are heavily US-centric.  This is primarily because the best dataset for many of the demonstrations is the National Health and Nutrition Examination Surveys (NHANES) dataset that is available as an R package, and because many of the other complex datasets included in R (such as those in the `fivethirtyeight` package) are also based in the US.  If you have suggestions for datasets from other regions, please pass them along to me! -->
 Me disculpo de antemano que las bases de datos usadas estén fuertemente centradas en Estados Unidos. Esto es principalmente porque la mejor base de datos para la mayoría de las demostraciones es la Encuesta Nacional de Nutrición y Salud (National Health and Nutrition Examination Survey, NHANES) que está disponible como un paquete de R, y porque muchas otras bases de datos complejas en R (como las del paquete `fivethirtyeight`) también están basadas en Estados Unidos. Si tienes alguna sugerencia de bases de datos de otras regiones, ¡por favor pásamelas!
@@ -83,28 +83,34 @@ Me disculpo de antemano que las bases de datos usadas estén fuertemente centrad
 La única manera de realmente aprender estadística es *haciendo* estadísticas. Mientras que históricamente muchos cursos de estadística se enseñan usando software estadístico gráfico de apuntar-y-dar-click, es cada vez más común que en la educación estadística se usen lenguajes abiertos en los cuales los estudiantes pueden escribir código para hacer sus propios análisis. Pienso que el ser capaz de realizar el código para nuestros propios análisis es esencial para obtener una apreciación más profunda del análisis estadístico, es la razón por la cual se espera que los estudiantes de mi curso en Stanford aprendan a usar el lenguaje de programación R para analizar datos, a la par del conocimiento estadístico que aprenden de este libro.
 
 <!-- There are two online companions to this textbook that can help the reader get started learning to program; [one focuses on the R programming language](https://statsthinking21.github.io/statsthinking21-R-site/), and [another focuses on the Python language](https://statsthinking21.github.io/statsthinking21-python/).  Both are currently works in progress -- please feel free to contribute! -->
-Existen dos acompañantes en línea para este libro que pueden ayudar al lector a comenzar a aprender a programar; [uno se enfoca en el lenguaje de programación R](https://statsthinking21.github.io/statsthinking21-R-site/), y el otro [se enfoca en el lenguaje Python](https://statsthinking21.github.io/statsthinking21-python/). Ambos son trabajos en progreso -- ¡siéntete libre de contribuir!
+Este libro tiene dos acompañantes en línea que pueden ayudar al lector a comenzar a aprender a programar; [uno se enfoca en el lenguaje de programación R](https://statsthinking21.github.io/statsthinking21-R-site/), y el otro [se enfoca en el lenguaje Python](https://statsthinking21.github.io/statsthinking21-python/). Ambos son trabajos en progreso -- ¡siéntete libre de contribuir!
 
 
 <!-- ## An open source book -->
 ## Un libro de código abierto (open source) 
 
 <!-- This book is meant to be a living document, which is why its source is available online at [https://github.com/poldrack/psych10-book](https://github.com/poldrack/psych10-book).  If you find any errors in the book or want to make a suggestion for how to improve it, please open an issue on the Github site. Even better, submit a pull request with your suggested change. -->  
-Este libro pretende ser un documento vivo, razón por la cual su código está disponible en línea en [https://github.com/poldrack/psych10-book](https://github.com/poldrack/psych10-book). Si encuentras muchos errores en este libro o quieres hacer una sugerencia de cómo mejorarlo, por favor abre un *issue* en el sitio de Github. Incluso mejor, envía un *pull request* con tu cambio sugerido.
+Este libro pretende ser un documento vivo, razón por la cual su código está disponible en línea en [https://github.com/poldrack/psych10-book](https://github.com/poldrack/psych10-book). Si encuentra cualquier error en este libro o quieres hacer una sugerencia de cómo mejorarlo, por favor abre un *issue* en el sitio de Github. Incluso mejor, envía un *pull request* con tu cambio sugerido.
 
 <!-- The book is licensed according to the [Creative Commons Attribution-NonCommercial 2.0 Generic (CC BY-NC 2.0) License](https://creativecommons.org/licenses/by-nc/2.0/).  Please see the terms of that license for more details. -->
 Este libro se publica usando la licencia de [Creative Commons Attribution-NonCommercial 2.0 Generic (CC BY-NC 2.0) License](https://creativecommons.org/licenses/by-nc/2.0/). Por favor, ve los términos de esa licencia para más detalles.
 
-## Acknowledgements
+<!-- ## Acknowledgements -->
+## Agradecimientos
 
-I'd first like to thank Susan Holmes, who first inspired me to consider writing my own statistics book.  Anna Khazenzon provided early comments and inspiration.  Lucy King provided detailed comments and edits on the entire book, and helped clean up the code so that it was consistent with the Tidyverse.  Michael Henry Tessler provided very helpful comments on the Bayesian analysis chapter. Particular thanks also go to Yihui Xie, creator of the Bookdown package, for improving the book's use of Bookdown features (including the ability for users to directly generate edits via the Edit button).  Finally, Jeanette Mumford provided very helpful suggestions on the book.
+<!-- I'd first like to thank Susan Holmes, who first inspired me to consider writing my own statistics book.  Anna Khazenzon provided early comments and inspiration.  Lucy King provided detailed comments and edits on the entire book, and helped clean up the code so that it was consistent with the Tidyverse.  Michael Henry Tessler provided very helpful comments on the Bayesian analysis chapter. Particular thanks also go to Yihui Xie, creator of the Bookdown package, for improving the book's use of Bookdown features (including the ability for users to directly generate edits via the Edit button).  Finally, Jeanette Mumford provided very helpful suggestions on the entire book. -->
+Primero me gustaría agradecer a Susan Holmes, quien fue la primera en inspirarme a considerar el escribir mi propio libro de estadística. Anna Khazenzon brindó comentarios e inspiración al inicio. Lucy King brindó comentarios y ediciones detalladas en todo el libro, y ayudó a limpiar el código para que fuera consistente con el Tidyverse. Michael Henry Tessler brindó comentarios muy útiles sobre el capítulo de análisis Bayesiano. Agradecimientos particulares van para Yihui Xie, creador del paquete Bookdown, por haber mejorado los usos que hace el libro de las características de Bookdown (incluyendo la habilidad de que los usuarios puedan generar ediciones directamente el botón "Edit"). Finalmente, Jeanette Mumford brindó sugerencias muy útiles a todo el libro.
 
-I'd also like to thank others who provided helpful comments and suggestions: Athanassios Protopapas, Wesley Tansey, Jack Van Horn, Thor Aspelund.
+<!-- I'd also like to thank others who provided helpful comments and suggestions: Athanassios Protopapas, Wesley Tansey, Jack Van Horn, Thor Aspelund. -->
+También me gustaría agradecer a otras personas quienes brindaron comentarios y sugerencias útiles: Athanassios Protopapas, Wesley Tansey, Jack Van Horn, Thor Aspelund.
 
-Thanks to the following Twitter users for helpful suggestions: \@enoriverbend
+<!-- Thanks to the following Twitter users for helpful suggestions: \@enoriverbend -->
+Gracias a los siguientes usuarios de Twitter por sus útiles sugerencias: \@enoriverbend
 
-Thanks to the man individuals who have contributed edits or issues by Github or email: 
-Isis Anderson, Larissa Bersh, Isil Bilgin, Forrest Dollins, Chuanji Gao, Nate Guimond, Alan He, Wu Jianxiao, James Kent, Dan Kessler, Philipp Kuhnke, Leila Madeleine, Lee Matos, Ryan McCormick, Kirsten Mettler, Shanaathanan Modchalingam, Martijn Stegeman, Mehdi Rahim, Jassary Rico-Herrera, Mingquian Tan, Wenjin Tao, Laura Tobar, Albane Valenzuela, Alexander Wang, Michael Waskom, 
+<!-- Thanks to the following individuals who have contributed edits or issues by Github or email: -->
+Gracias a las siguientes personas quienes han contribuido a ediciones o problemas a través de Github o por email:
+Isis Anderson, Larissa Bersh, Isil Bilgin, Forrest Dollins, Chuanji Gao, Nate Guimond, Alan He, Wu Jianxiao, James Kent, Dan Kessler, Philipp Kuhnke, Leila Madeleine, Lee Matos, Ryan McCormick, Jarod Meng, Kirsten Mettler, Shanaathanan Modchalingam, Martijn Stegeman, Mehdi Rahim, Jassary Rico-Herrera, Mingquian Tan, Wenjin Tao, Laura Tobar, Albane Valenzuela, Alexander Wang, Michael Waskom, 
 barbyh, basicv8vc, brettelizabeth, codetrainee, dzonimn, epetsen, carlosivanr, hktang, jiamingkong, khtan, kiyofumi-kan, NevenaK, ttaweel.
 
-Special thanks to Isil Bilgin for assistance in fixing many of these issues.  
+<!-- Special thanks to Isil Bilgin for assistance in fixing many of these issues. -->
+Especialmente gracias a Isil Bilgin por su asistencia en corregir muchos de los asuntos.
